chore(charts): configure feature flag
Enable the feature flag `useAccountSegmentRestriction` in aggregation-staging.

--- a/.charts/tink-backend-aggregation/templates/agents-config.yaml
+++ b/.charts/tink-backend-aggregation/templates/agents-config.yaml
@@ -116,6 +116,9 @@ data:
         {{- if $featureFlagsConfig.supportIndividualAccountsRefresh }}
           supportIndividualAccountsRefresh: {{ $featureFlagsConfig.supportIndividualAccountsRefresh | default false }}
         {{- end }}
+        {{- if $featureFlagsConfig.useAccountSegmentRestriction }}
+          useAccountSegmentRestriction: {{ $featureFlagsConfig.useAccountSegmentRestriction | default false }}
+        {{- end }}
 
       integrations:
         {{- if $agentsConfig.collectorSubscriptionKey }}
