--- a/.charts/tink-backend-aggregation/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-production.yaml
@@ -473,6 +473,7 @@ featureFlags:
   createBeneficiary: true
   allowRefreshRegardlessOfRestrictions: true
   supportIndividualAccountsRefresh: true
+  useAccountSegmentRestriction: false
 
 providerConfigurationServiceConfiguration:
   enabled: true
