--- a/.charts/tink-backend-aggregation/values/aggregation-staging.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-staging.yaml
@@ -74,6 +74,7 @@ featureFlags:
   createBeneficiary: true
   allowRefreshRegardlessOfRestrictions: true
   supportIndividualAccountsRefresh: true
+  useAccountSegmentRestriction: true
 
 providerConfigurationServiceConfiguration:
   enabled: true
