chore(chart): enable acc segment restriction in prod
Tested the feature in staging (already enabled).

--- a/.charts/tink-backend-aggregation/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-production.yaml
@@ -473,7 +473,7 @@ featureFlags:
   createBeneficiary: true
   allowRefreshRegardlessOfRestrictions: true
   supportIndividualAccountsRefresh: true
-  useAccountSegmentRestriction: false
+  useAccountSegmentRestriction: true
 
 providerConfigurationServiceConfiguration:
   enabled: true
