--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/BUILD
@@ -53,6 +53,7 @@ java_library(
         "//third_party:org_apache_httpcomponents_httpclient",
         "//third_party:org_apache_httpcomponents_httpcore",
         "//third_party:org_slf4j_slf4j_api",
+        "@aggregation//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/core",
     ],
 )
