chore(eidas): Add logging for EidasIdentity

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/eidassigner/module/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/eidassigner/module/BUILD
@@ -11,5 +11,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidasidentity/identity",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidassigner",
         "//third_party:com_google_inject_guice",
+        "//third_party:lombok_libs",
+        "//third_party:org_slf4j_slf4j_api",
     ],
 )
