feat(AS): CPU hpa percentage based

--- a/.charts/tink-backend-aggregation/templates/aggregation-hpa.yaml
+++ b/.charts/tink-backend-aggregation/templates/aggregation-hpa.yaml
@@ -14,7 +14,7 @@ spec:
   - type: Pods
     pods:
       metricName: cpu_usage
-      targetAverageValue: {{ default "600m" .Values.targetAverageCpuValue }}
+      targetAverageValue: {{ default "0.75" .Values.targetAverageCpuValue }}
   - type: Pods
     pods:
       metricName: tink_api_http_requests_per_second
