refactor(revolut): Add toggle for testing consent status check
[IFD-2332]

--- a/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/agentfactory/utils/BUILD
+++ b/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/agentfactory/utils/BUILD
@@ -91,5 +91,6 @@ java_library(
         "@aggregation//:io_reactivex_rxjava3_rxjava",
         "@aggregation//:joda_time_joda_time",
         "@aggregation//:org_yaml_snakeyaml",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
