--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/utils/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/utils/BUILD
@@ -13,6 +13,7 @@ java_library(
         "//third_party:com_google_guava_guava",
         "//third_party:com_google_inject_guice",
         "//third_party:com_sun_jersey_jersey_core",
+        "//third_party:lombok_libs",
         "//third_party:net_sourceforge_tess4j",
         "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_apache_httpcomponents_httpclient",
