chore(rollout): updated rollout strategy

--- a/.charts/tink-backend-aggregation/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation/templates/deployment.yaml
@@ -19,6 +19,7 @@ spec:
     type: RollingUpdate
     rollingUpdate:
       maxSurge: 50%
+      maxUnavailable: 35%
   template:
     metadata:
       labels:
