--- a/.charts/tink-backend-aggregation-agents/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation-agents/values/aggregation-production.yaml
@@ -24,7 +24,7 @@ allErrorsRefresh: outcome!~"failed|unavailable|partially_completed"
 
 allLoginActions: action=~"login-auto|login-manual|login-cron|is-logged-in|persist-login-session"
 manualLoginActions: action=~"login-manual|is-logged-in"
-loginActionsWithoutManual: action=~"login-auto|login-cron|is-logged-in|persist-login-session"
+loginActionsWithoutManual: action=~"login-auto|login-cron|persist-login-session"
 
 obAgents: provider=~".*-ob|.*-oauth2"
 reAgents: provider!~".*-ob|.*-oauth2"
