--- a/src/aggregation/service/src/test/java/se/tink/backend/aggregation/service/utils/BUILD
+++ b/src/aggregation/service/src/test/java/se/tink/backend/aggregation/service/utils/BUILD
@@ -7,17 +7,17 @@ java_library(
     ],
     deps = [
         "//third_party:lombok_plugin",
+        "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
+        "@aggregation//:com_google_guava_guava",
+        "@aggregation//:commons_io_commons_io",
+        "@aggregation//:org_apache_httpcomponents_httpclient",
+        "@aggregation//:org_hamcrest_hamcrest_core",
+        "@aggregation//:org_hamcrest_hamcrest_library",
         "@aggregation//:org_projectlombok_lombok",
+        "@aggregation//:org_springframework_boot_spring_boot_test",
+        "@aggregation//:org_springframework_spring_test",
+        "@aggregation//:org_springframework_spring_web",
+        "@aggregation//:org_testcontainers_testcontainers",
         "@org_slf4j_slf4j_api",
-        "@system_tests//:com_fasterxml_jackson_core_jackson_databind",
-        "@system_tests//:com_google_guava_guava",
-        "@system_tests//:commons_io_commons_io",
-        "@system_tests//:org_apache_httpcomponents_httpclient",
-        "@system_tests//:org_hamcrest_hamcrest_core",
-        "@system_tests//:org_hamcrest_hamcrest_library",
-        "@system_tests//:org_springframework_boot_spring_boot_test",
-        "@system_tests//:org_springframework_spring_test",
-        "@system_tests//:org_springframework_spring_web",
-        "@system_tests//:org_testcontainers_testcontainers",
     ],
 )
