--- a/tools/format/BUILD
+++ b/tools/format/BUILD
@@ -2,9 +2,9 @@ java_binary(
     name = "google-java-format",
     main_class = "com.google.googlejavaformat.java.Main",
     runtime_deps = [
-        "@aggregation//:com_google_guava_guava",
-        "@aggregation_temp//:com_google_errorprone_javac_shaded",
-        "@aggregation_temp//:com_google_googlejavaformat_google_java_format",
+        "@java_formatter//:com_google_errorprone_javac_shaded",
+        "@java_formatter//:com_google_googlejavaformat_google_java_format",
+        "@java_formatter//:com_google_guava_guava",
     ],
 )
 
