chore(provision): provisioning client

--- a/.charts/tink-backend-aggregation/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-production.yaml
@@ -440,6 +440,8 @@ clients:
     aggregatorIdentifier: "Snoop"
   uk-snoop-testing:
     aggregatorIdentifier: "Snoop"
+  uk-snoop-development:
+    aggregatorIdentifier: "Snoop"
   zimpler-production:
     aggregatorIdentifier: "Zimpler"
   zimpler-test:
