chore(sbab/legacy): update to new api flow

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/legacy/banks/sbab/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/legacy/banks/sbab/BUILD
@@ -16,6 +16,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/agents",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/agentsservice",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/signaturekeypair",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/client",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/source_info",
         "//src/integration/models",
         "//src/integration/signableoperation/src/main/java/se/tink/libraries/signableoperation/enums",
@@ -26,6 +27,8 @@ java_library(
         "//src/libraries/serialization",
         "//src/libraries/strings",
         "//third_party:com_google_http_client_google_http_client",
+        "//third_party:com_google_inject_guice",
+        "//third_party:com_sun_jersey_contribs_jersey_apache_client4",
         "//third_party:com_sun_jersey_jersey_client",
         "//third_party:com_sun_jersey_jersey_core",
         "//third_party:lombok_libs",
