chore(sbab/legacy): add persistence between sessions

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/legacy/banks/sbab/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/legacy/banks/sbab/BUILD
@@ -22,6 +22,7 @@ java_library(
         "//src/integration/signableoperation/src/main/java/se/tink/libraries/signableoperation/enums",
         "//src/integration/transfer:enums",
         "//src/integration/transfer:rpc",
+        "//src/libraries/credentials-persistence",
         "//src/libraries/date",
         "//src/libraries/i18n",
         "//src/libraries/serialization",
