feat(FrBase): Support for DateUtil

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/fropenbanking/base/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/fropenbanking/base/BUILD
@@ -15,6 +15,7 @@ java_library(
         "//src/integration/transfer:enums",
         "//src/integration/transfer:rpc",
         "//src/libraries/agent-storage",
+        "//src/libraries/date",
         "//third_party:com_github_rholder_guava_retrying",
         "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang",
